@@ -111,7 +111,7 @@ namespace simuPOP
 #ifdef BINARYALLELE
 		allele = !allele;
 #else
-		Allele new_allele = rng().randInt(this->maxAllele());
+		Allele new_allele = rng().randInt(maxAllele());
 		if(new_allele >= allele)
 			allele = new_allele+1;
 		else
